Fixed UI: Category hierarchy list word wrap issue #133

--- a/src/public/css/redminportal.css
+++ b/src/public/css/redminportal.css
@@ -339,6 +339,7 @@ ul.redooor-hierarchy ul {
 }
 ul.redooor-hierarchy li {
   line-height: 1.8;
+  white-space: nowrap;
 }
 ul.redooor-hierarchy a {
   padding: 0.3em 0.5em;
