--- a/src/resources/assets/less/redminportal-extra.less
+++ b/src/resources/assets/less/redminportal-extra.less
@@ -373,6 +373,7 @@ ul.redooor-hierarchy {
 
     li {
         line-height: 1.8;
+        white-space: nowrap;
     }
 
     a {
